# interviewAvatar

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  render.yaml  requirements.txt  start.ps1
.github/workflows/: ci.yml
agent/: __init__.py  agent.py  avatar.py  pyproject.toml
agent/coach/: __init__.py  config.py  flow.py  prompt_builder.py  report.py
backend/: alembic.ini  db.py  livekit_service.py  main.py  models.py  requirements.txt
backend/migrations/: env.py
docs/screenshots/: README.md
scripts/: sync-github-repository-meta.ps1
web/: index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.mts
web/src/: App.tsx  index.css  vite-env.d.ts
web/src/pages/: Landing.tsx  LiveRoom.tsx  PreJoin.tsx  Report.tsx  SessionBuilder.tsx
