[project]
name = "interview-avatar-agent"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "livekit-agents[openai]~=1.3",
    "livekit-plugins-noise-cancellation~=0.2",
    "livekit-plugins-silero>=1.3.10",
    "livekit-plugins-turn-detector>=1.3.10",
    "python-dotenv>=1.2.1",
    "pydantic>=2.9.0",
    "httpx>=0.27.0",
]

